# RustKPI

calculator/: Cargo.toml
calculator/src/: main.rs
real-time_communication/: Cargo.toml
real-time_communication/src/: handlers.rs  main.rs  models.rs  websocket.rs
todo-list/: Cargo.toml  tasks.json
todo-list/src/: main.rs
