[package]
name = "real-time_communication"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.12"
eframe = "0.20"
egui = "0.20" 
actix = "0.13"
actix-session = "0.5"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"